src/objects/StudentDisposition__c.object
<CustomObject>
    <fields>
        <fullName>SubmittersEmail__c</fullName>
        <description>Text field to allow mapping of qualtrics form field.</description>
        <label>Submitter&apos;s Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubmittersName__c</fullName>
        <label>Submitter&apos;s Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaskFailedAttempts__c</fullName>
        <formula>TEXT(TaskFailure__r.NumberFailedAttempts__c) &amp; &quot; Failed Attempts&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task Failed Attempts</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaskFailedName__c</fullName>
        <formula>TaskFailure__r.TaskTitle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task Failed Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaskFailure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Task Failure</label>
        <referenceTo>TaskStreamTaskFailure__c</referenceTo>
        <relationshipLabel>Student Concerns</relationshipLabel>
        <relationshipName>StudentConcerns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TaskLastFailedDate__c</fullName>
        <formula>TaskFailure__r.LastFailedAttempt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task Last Failed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TaskName__c</fullName>
        <label>Task Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaskOwner__c</fullName>
        <formula>IF(ISBLANK(AssignedTo__c),  LastModifiedById,  AssignedTo__r.Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <picklist>
            <picklistValues>
                <fullName>Cap_BU_GR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cap_BU_UG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cap_HP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cap_IT_GR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cap_IT_UG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cap_TE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA_BU_GR_Fin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA_BU_GR_Ldr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA_BU_UG_Fin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA_BU_UG_Ldr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA_GE_Com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA_GE_Hmt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA_GE_Lit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA_GE_SS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA_HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA_HP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA_IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA_TE_Fie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA_TE_Fou</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA_TE_Lan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA_TE_MEd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA_TE_Mat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA_TE_Ped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA_TE_Sci</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA_TE_Spe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Originality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TermEndDate__c</fullName>
        <description>Formula that brings over the student&apos;s current term end date from the contact record.</description>
        <formula>Student__r.TermEndDate__c</formula>
        <label>Term End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TermStartDate__c</fullName>
        <description>Formula that brings over the student&apos;s current term start date from the contact record.</description>
        <formula>Student__r.TermStartDate__c</formula>
        <label>Term Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TopIndividual__c</fullName>
        <label>Top Individual</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TypeOfIssue__c</fullName>
        <label>Type Of Issue</label>
        <picklist>
            <picklistValues>
                <fullName>Academic Authenticity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Articulation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unprofessional Conduct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Policy/Procedures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consult</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Counseled Out of Licensure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Absences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appeal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classroom Environment and Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cohort</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collaborative Practitioner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DT-Conflict</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ethical Practitioner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lesson Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lesson Presentation/ Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Observation Forms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCE Problem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Practitioner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reflective Practitioner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TWS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Watch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Placement Concerns during DT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Criminal Acts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abuse of Patients</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcohol or Drugs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Improper Remunerative Conduct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sharing Confidential / Identifying Patient Information</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <label>Vendor</label>
        <picklist>
            <picklistValues>
                <fullName>TaskStream</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caveon Crawls</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Student Concern</label>
    <listViews>
        <fullName>AllStudentDispositions</fullName>
        <columns>NAME</columns>
        <columns>TypeOfIssue__c</columns>
        <columns>IssueSubType__c</columns>
        <columns>Status__c</columns>
        <columns>Resolution__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Student Dispositions</label>
        <sharedTo>
            <group>CodeofConduct</group>
            <group>SRMSupport</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ConcernsforArticulation</fullName>
        <columns>NAME</columns>
        <columns>TypeOfIssue__c</columns>
        <columns>FormAreaOfConcern__c</columns>
        <columns>AssessmentName__c</columns>
        <columns>FailNumber__c</columns>
        <columns>StudentProgram__c</columns>
        <columns>CWECompleted__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Resolved,Appeal Approved,Appeal Denied,Under Student Conduct Board Review</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>StudentDisposition__c.ArticulationConcern</value>
        </filters>
        <label>Concerns for Articulation</label>
        <queue>ConcernArticulation</queue>
        <sharedTo>
            <group>CodeofConduct</group>
            <group>ConcernArticulation</group>
            <group>ConcernEvaluation</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ConcernsforCodeofConduct</fullName>
        <columns>Student__c</columns>
        <columns>NAME</columns>
        <columns>ConcernType__c</columns>
        <columns>CodeofConductStatus__c</columns>
        <columns>TypeOfIssue__c</columns>
        <columns>IssueSubType__c</columns>
        <columns>StudentProgram__c</columns>
        <columns>ReferralResolutionPath__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Under Student Conduct Board Review</value>
        </filters>
        <filters>
            <field>SCBPrimarySanction__c</field>
            <operation>equals</operation>
        </filters>
        <label>Concerns for Code of Conduct</label>
        <sharedTo>
            <group>CodeofConduct</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ConcernsforCodeofConductforTeams</fullName>
        <columns>NAME</columns>
        <columns>AreaOfConcern__c</columns>
        <columns>TypeOfIssue__c</columns>
        <columns>IssueSubType__c</columns>
        <columns>Student__c</columns>
        <columns>StudentProgram__c</columns>
        <columns>Status__c</columns>
        <columns>ResolvedDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Under Student Conduct Board Review</value>
        </filters>
        <label>Concerns for Code of Conduct for Teams</label>
        <sharedTo>
            <group>CodeofConduct</group>
            <group>ConcernEvaluation</group>
            <group>ConcernITandBusiness</group>
            <group>ConcernNursing</group>
            <group>ConcernTeachers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ConcernsforITandBusiness</fullName>
        <columns>NAME</columns>
        <columns>TypeOfIssue__c</columns>
        <columns>IssueSubType__c</columns>
        <columns>StudentProgram__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Resolved,Appeal Approved,Appeal Denied,Under Student Conduct Board Review</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>StudentDisposition__c.ITandBusinessCollegeConcerns</value>
        </filters>
        <label>Concerns for IT and Business</label>
        <queue>ConcernITandBusiness</queue>
        <sharedTo>
            <group>CodeofConduct</group>
            <group>ConcernITandBusiness</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ConcernsforNursing</fullName>
        <booleanFilter>(1 AND 2) OR (3 AND 4 AND 5 AND 8) OR (5 AND 6 AND 7 AND 8 )</booleanFilter>
        <columns>NAME</columns>
        <columns>TypeOfIssue__c</columns>
        <columns>IssueSubType__c</columns>
        <columns>StudentProgram__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Resolved,Appeal Approved,Appeal Denied,Under Student Conduct Board Review</value>
        </filters>
        <filters>
            <field>ConcernType__c</field>
            <operation>equals</operation>
            <value>Nursing College Disposition Concern</value>
        </filters>
        <filters>
            <field>ConcernType__c</field>
            <operation>equals</operation>
            <value>Academic Authenticity/Originality Concern,Articulation Concern</value>
        </filters>
        <filters>
            <field>Resolution__c</field>
            <operation>equals</operation>
            <value>Caution Sent,CWE Referral,Warning Sent</value>
        </filters>
        <filters>
            <field>StudentCollege__c</field>
            <operation>equals</operation>
            <value>HE</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>StudentDisposition__c.ConcernClosed</value>
        </filters>
        <filters>
            <field>SCBPrimarySanction__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>ContactedByCollege__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Concerns for Nursing</label>
        <sharedTo>
            <group>CodeofConduct</group>
            <group>ConcernNursing</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ConcernsforOriginality</fullName>
        <columns>NAME</columns>
        <columns>TypeOfIssue__c</columns>
        <columns>IssueSubType__c</columns>
        <columns>Assessment__c</columns>
        <columns>TaskFailure__c</columns>
        <columns>StudentProgram__c</columns>
        <columns>Status__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Resolved,Appeal Approved,Appeal Denied,Under Student Conduct Board Review</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>StudentDisposition__c.AcademicAuthenticityOriginalityConcern</value>
        </filters>
        <label>Concerns for Originality</label>
        <queue>ConcernEvaluation</queue>
        <sharedTo>
            <group>CodeofConduct</group>
            <group>ConcernEvaluation</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ConcernsforTeachers</fullName>
        <booleanFilter>(1 AND 2) OR  (3 AND 4 AND 5 AND 6) OR (2 AND 6 AND 5 AND 7 AND 8)</booleanFilter>
        <columns>NAME</columns>
        <columns>TypeOfIssue__c</columns>
        <columns>IssueSubType__c</columns>
        <columns>StudentProgram__c</columns>
        <columns>Status__c</columns>
        <columns>Resolution__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>contains</operation>
            <value>Concern-Teachers</value>
        </filters>
        <filters>
            <field>AssignedTo__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>ConcernType__c</field>
            <operation>equals</operation>
            <value>Academic Authenticity/Originality Concern,Articulation Concern</value>
        </filters>
        <filters>
            <field>Resolution__c</field>
            <operation>equals</operation>
            <value>Caution Sent,CWE Referral,Warning Sent</value>
        </filters>
        <filters>
            <field>StudentCollege__c</field>
            <operation>equals</operation>
            <value>TC</value>
        </filters>
        <filters>
            <field>ContactedByCollege__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>SCBPrimarySanction__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>StudentDisposition__c.ConcernClosed</value>
        </filters>
        <label>Concerns for Teachers</label>
        <sharedTo>
            <group>CodeofConduct</group>
            <group>ConcernTeachers</group>
            <group>SRMSupport</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NursingDispositions</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>TypeOfIssue__c</columns>
        <columns>IssueSubType__c</columns>
        <columns>StudentProgram__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ConcernType__c</field>
            <operation>equals</operation>
            <value>Nursing College Disposition Concern</value>
        </filters>
        <filters>
            <field>StudentCollege__c</field>
            <operation>equals</operation>
            <value>HE</value>
        </filters>
        <label>Nursing Dispositions</label>
        <sharedTo>
            <group>CodeofConduct</group>
            <group>ConcernNursing</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NursingOriginalityConcerns</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>TypeOfIssue__c</columns>
        <columns>IssueSubType__c</columns>
        <columns>StudentProgram__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ConcernType__c</field>
            <operation>equals</operation>
            <value>Academic Authenticity/Originality Concern,Articulation Concern</value>
        </filters>
        <filters>
            <field>StudentCollege__c</field>
            <operation>equals</operation>
            <value>HE</value>
        </filters>
        <label>Nursing Originality Concerns</label>
        <sharedTo>
            <group>CodeofConduct</group>
            <group>ConcernNursing</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TSConcerns</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>Student__c</columns>
        <columns>TypeOfIssue__c</columns>
        <columns>ReasonForConcern__c</columns>
        <columns>Status__c</columns>
        <columns>AssignedTo__c</columns>
        <columns>ConcernType__c</columns>
        <columns>StudentCollege__c</columns>
        <columns>ResolvedDate__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Resolved,Appeal Approved,Appeal Denied,Under Student Conduct Board Review</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>StudentDisposition__c.TeachersCollegeDispositionConcern</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>StudentDisposition__c.TeachersCollegeFieldConcernPracticumDTorPCE</value>
        </filters>
        <label>TS Concerns-Open</label>
        <queue>ConcernTeachers</queue>
        <sharedTo>
            <group>SRMSupport</group>
            <role>TeacherSuccess</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TSHearingConcerns</fullName>
        <booleanFilter>((1 AND 2) OR (2 AND 3 AND 4)) AND 5</booleanFilter>
        <columns>NAME</columns>
        <columns>TypeOfIssue__c</columns>
        <columns>IssueSubType__c</columns>
        <columns>StudentProgram__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Resolved,Appeal Approved,Appeal Denied,Under Student Conduct Board Review</value>
        </filters>
        <filters>
            <field>MyConcerns__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CodeofConductPrimarySanction__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Under Student Conduct Board Review</value>
        </filters>
        <filters>
            <field>ContactedByCollege__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>TS Hearing Concerns</label>
        <sharedTo>
            <group>SRMSupport</group>
            <group>TeacherSuccess</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TS_Concerns_ALL</fullName>
        <booleanFilter>1 OR 2 or (3 and 4)</booleanFilter>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>TypeOfIssue__c</columns>
        <columns>ReasonForConcern__c</columns>
        <columns>Status__c</columns>
        <columns>AssignedTo__c</columns>
        <columns>Student__c</columns>
        <columns>StudentCollege__c</columns>
        <columns>ResolvedDate__c</columns>
        <columns>Resolution__c</columns>
        <columns>ResolutionTime__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>StudentDisposition__c.TeachersCollegeDispositionConcern</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>StudentDisposition__c.TeachersCollegeFieldConcernPracticumDTorPCE</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>StudentDisposition__c.ConcernClosed</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>concern-teachers</value>
        </filters>
        <label>TS Concerns-ALL</label>
        <sharedTo>
            <group>SRMSupport</group>
            <group>TeacherSuccess</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TS_Concerns_for_Teachers</fullName>
        <booleanFilter>(1 AND 2) OR  (3 AND 4 AND 5 AND 6) OR (2 AND 6 AND 5 AND 7 AND 8)</booleanFilter>
        <columns>NAME</columns>
        <columns>TypeOfIssue__c</columns>
        <columns>IssueSubType__c</columns>
        <columns>StudentProgram__c</columns>
        <columns>Status__c</columns>
        <columns>Resolution__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>contains</operation>
            <value>Concern-Teachers</value>
        </filters>
        <filters>
            <field>AssignedTo__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>ConcernType__c</field>
            <operation>equals</operation>
            <value>Academic Authenticity/Originality Concern,Articulation Concern</value>
        </filters>
        <filters>
            <field>Resolution__c</field>
            <operation>equals</operation>
            <value>Caution Sent,CWE Referral,Warning Sent</value>
        </filters>
        <filters>
            <field>StudentCollege__c</field>
            <operation>equals</operation>
            <value>TC</value>
        </filters>
        <filters>
            <field>ContactedByCollege__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>SCBPrimarySanction__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>StudentDisposition__c.ConcernClosed</value>
        </filters>
        <label>TS-Concerns for Teachers</label>
        <sharedTo>
            <group>CodeofConduct</group>
            <group>ConcernTeachers</group>
            <group>SRMSupport</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>z_TS_Concerns_Open</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Student__c</columns>
        <columns>TypeOfIssue__c</columns>
        <columns>ReasonForConcern__c</columns>
        <columns>Status__c</columns>
        <columns>AssignedTo__c</columns>
        <columns>ConcernType__c</columns>
        <columns>StudentCollege__c</columns>
        <columns>ResolvedDate__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Resolved,Appeal Approved,Appeal Denied,Under Student Conduct Board Review</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>StudentDisposition__c.TeachersCollegeDispositionConcern</value>
        </filters>
        <label>z_TS Concerns-Open</label>
        <queue>ConcernTeachers</queue>
        <sharedTo>
            <group>SRMSupport</group>
            <role>TeacherSuccess</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Concern Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Student Concerns</pluralLabel>
    <recordTypes>
        <fullName>AcademicAuthenticityOriginalityConcern</fullName>
        <active>true</active>
        <description>Student Concern on Academic Authenticity or Originality</description>
        <label>Academic Authenticity/Originality Concern</label>
    </recordTypes>
    <recordTypes>
        <fullName>ArticulationConcern</fullName>
        <active>true</active>
        <description>Student Concern on Articulation</description>
        <label>Articulation Concern</label>
    </recordTypes>
    <recordTypes>
        <fullName>ConcernClosed</fullName>
        <active>true</active>
        <description>Concerns closed</description>
        <label>Concern Closed</label>
    </recordTypes>
    <recordTypes>
        <fullName>DispositionConcern</fullName>
        <active>true</active>
        <label>Disposition Concern</label>
    </recordTypes>
    <recordTypes>
        <fullName>ITandBusinessCollegeConcerns</fullName>
        <active>true</active>
        <description>Student Code of Conduct Concern for IT and Business College</description>
        <label>IT and Business College Concerns</label>
    </recordTypes>
    <recordTypes>
        <fullName>NursingCollegeDispositionConcern</fullName>
        <active>true</active>
        <description>Student Concerns for Nursing College</description>
        <label>Nursing College Disposition Concern</label>
    </recordTypes>
    <recordTypes>
        <fullName>TeachersCollegeDispositionConcern</fullName>
        <active>true</active>
        <description>Student Concerns for Teacher&apos;s College</description>
        <label>Teachers College Disposition Concern</label>
    </recordTypes>
    <recordTypes>
        <fullName>TeachersCollegeFieldConcernPracticumDTorPCE</fullName>
        <active>true</active>
        <description>Field Concern/Issue for Practicum, DT or PCE for Teacher&apos;s College</description>
        <label>Teachers College Field Concern (Practicum, DT or PCE)</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ResolvedRequiresResolution</fullName>
        <active>true</active>
        <description>Require a Resolution be selected if Status = Resolved</description>
        <errorConditionFormula>AND(ISPICKVAL(Status__c,&quot;Resolved&quot;),ISPICKVAL(Resolution__c,&quot;&quot;))</errorConditionFormula>
        <errorDisplayField>Resolution__c</errorDisplayField>
        <errorMessage>Resolution is Required if Status = Resolved</errorMessage>
    </validationRules>
</CustomObject>